fix: исправил gap на мобилке

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -115,7 +115,7 @@
 @media screen and (max-width: 650px){
     .header{
         padding: 0 20px;
-        gap: 10px;
+        gap: 30px;
     }
     .header__button-text{
         font-size: 16px;
@@ -123,7 +123,7 @@
     }
 @media screen and (max-width: 390px){
         .header{
-            padding: 0 10px;
+            padding: 0 30px;
             gap: 10px;
         }
         .header__button-text{
